--- a/src/components/Hero/Overflow/Overflow.astro
+++ b/src/components/Hero/Overflow/Overflow.astro
@@ -1,15 +1,17 @@
 ---
+import type { HeroBlock } from "@utils/payload/types";
+interface Props extends HeroBlock {}
+
 import Container from "@components/Container.astro";
 import "./hero.css";
 import CustomImage from "@components/CustomImage.astro";
-import type { HeroProps } from "@utils/types";
-interface Props extends HeroProps {}
-const { title, excerpt, image } = Astro.props;
+const props = Astro.props;
 ---
 
 <header class="overflow_hero">
     <CustomImage
-        image={image}
+        id="overflow_hero__image"
+        image={props.cover}
         classlist="overflow_hero__image"
         size="large"
         eager={true}
@@ -18,11 +20,14 @@ const { title, excerpt, image } = Astro.props;
     <Container>
         <div class="overflow_hero__wrapper">
             <article class="overflow_hero__content">
-                <h1 set:html={title}></h1>
-                <p>{excerpt}</p>
-                <a href="#contact" class="btn btn-md btn-primary--darker" style="margin-top: 0.825rem;">Let's Talk</a>
+                <h1 set:html={props.heading} />
+                <p>{props.excerpt}</p>
+                <a
+                    href="#contact"
+                    class="btn btn-md btn-primary--darker"
+                    style="margin-top: 0.825rem;">Let's Talk</a
+                >
             </article>
         </div>
     </Container>
 </header>
-
