--- a/src/components/Hero/PageHero.astro
+++ b/src/components/Hero/PageHero.astro
@@ -3,11 +3,12 @@ import type { HeroBlock } from "@utils/payload/types"
 interface Props extends HeroBlock {}
 
 import StylisedHorizontal from "./StylisedHorizontal/StylisedHorizontal.astro";
+import Overflow from "./Overflow/Overflow.astro";
 
 const props = Astro.props
 ---
 {props.type === "stylised horizontal" && <StylisedHorizontal {...props} />}
-
+{props.type === "default" && <Overflow {...props} />}
 
 <!-- ---
 import type { HeroProps } from "@utils/types";
