--- a/src/components/Hero/Overflow/hero.css
+++ b/src/components/Hero/Overflow/hero.css
@@ -7,7 +7,7 @@
 }
 
 .overflow_hero__content h1 {
-    color: var(--clr-primary);
+    color: var(--clr-primary-lighter);
     font-size: var(--heading-4xl);
     max-width: 50ch;
 }
@@ -25,12 +25,13 @@
     background: hsl(90 15% 15% / 0.5);
 }
 
-.overflow_hero__image {
+img#overflow_hero__image.overflow_hero__image {
     position: relative;
     isolation: isolate;
 
     width: 100%;
     height: 100%;
+    max-width: 100% !important;
 
     grid-column: 1 / -1;
     grid-row: 1 / -1;
