--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -6,14 +6,12 @@ const {navigation, blocks, country, title} = await fetchPage(1, ["navigation", "
 const hero: HeroBlock = blocks.find(block => block.blockType === 'simple-hero') || {} as HeroBlock
 console.log(`Hero Type: ${hero.type}`);
 // import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
-// import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
+import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
 import StickyNav from "@components/PageNavigation/StickyNav/StickyNav.astro";
 import BlockyNav from "./BlockyNav/BlockyNav.astro";
 import SimpleNav from "./SimpleNav/SimpleNav.astro";
 // import CenterNav from "./CenterNav/CenterNav.astro";
-import FloatingPill from "./FloatingPill/FloatingPill.astro";
 const props = Astro.props;
-
 
 const fixedMenu = ["horizontal with image", "black modern", "gradient", "default", "default horizontal", "big name"].includes(hero.type) ? true : false;
 const showSimpleNav = ["alternate vertical", "default vertical", "two column", "stylised horizontal"].includes(hero.type)
@@ -25,10 +23,10 @@ const navProps = {
     country,
     fixedMenu: fixedMenu,
 }
+
+// console.log('Navigation Props:', navProps)
 ---
 <!-- <StickyNav {...navProps}/> -->
 
 {showSimpleNav && <SimpleNav {...navProps}/>}
-<!-- 
-
-{showPillNav && <FloatingPill {...navProps}/>} -->
+{showPillNav && <FloatingPill {...navProps}/>}
