--- a/src/components/Sections/Contact Sections/DefaultContact/contact.css
+++ b/src/components/Sections/Contact Sections/DefaultContact/contact.css
@@ -26,10 +26,24 @@
 .default_contact__location .location iframe {
     min-height: 300px;
 }
-
+.social_links,
+.two_column_contact__phone,
+.two_column_contact__email {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: var(--size-2);
+}
 .social_links,
 .working_hours {
     padding-top: var(--size-4);
-    margin-top: var(--size-4);
+    margin-block: var(--size-4);
     border-top: 2px solid var(--clr-primary-dark);
+}
+
+.default_contact__location {
+    display: grid;
+    grid-template-rows: auto 400px;
+    gap: var(--size-2);
 }
