--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -11,11 +11,11 @@ const props = Astro.props;
 <div
     class="content-with-media page-section"
     data-highlight={props.highlight}
-    id={props["anchor id"].split(" ").join("-")}
+    id={props["anchor id"]?.split(" ").join("-")}
     data-offscreen
 >
     <Container>
-        <div class="content-with-media__content_wrapper">
+        <div class="content-with-media__content_wrapper" data-direction={props["text position"]}>
             <article class="content-with-media__article">
                 <header class="content-with-media__header">
                     <h2>{props.title}</h2>
