--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -8,9 +8,7 @@ import PageHero from "@components/Hero/PageHero.astro"
 import SimpleTestimonial from "@components/Sections/Testimonial/SimpleTestimonial/SimpleTestimonial.astro"
 import ContactSection from "./Contact Sections/ContactSection.astro"
 
-const page = await fetchPage(1, ['blocks'])
-const blocks = page.blocks
-console.log(blocks)
+const {blocks, socialLinks, operatingHours} = await fetchPage(Number(import.meta.env.PAGE_ID), ['blocks', 'socialLinks', 'operatingHours'])
 ---
 
 {
@@ -29,7 +27,7 @@ console.log(blocks)
             case 'simple-testimonial':
                 return <SimpleTestimonial {...block} />
             case 'simple-contact':
-                return <ContactSection {...block} />
+                return <ContactSection {...block} {socialLinks} {operatingHours}/>
             default:
                 break;
         }
