--- a/src/components/Hero/PageHero.astro
+++ b/src/components/Hero/PageHero.astro
@@ -4,11 +4,13 @@ interface Props extends HeroBlock {}
 
 import StylisedHorizontal from "./StylisedHorizontal/StylisedHorizontal.astro";
 import Overflow from "./Overflow/Overflow.astro";
+import VerticalWithImage from "./VerticalWithImage/VerticalWithImage.astro";
 
 const props = Astro.props
 ---
 {props.type === "stylised horizontal" && <StylisedHorizontal {...props} />}
 {props.type === "default" && <Overflow {...props} />}
+{props.type === "vertical" && <VerticalWithImage {...props} />}
 
 <!-- ---
 import type { HeroProps } from "@utils/types";
