--- a/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
+++ b/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
@@ -1,33 +1,34 @@
 ---
+import type { HeroBlock } from "@utils/payload/types";
+interface Props extends HeroBlock {}
+
 import Container from "@components/Container.astro";
 import "./hero.css";
 import CustomImage from "@components/CustomImage.astro";
-import type { HeroProps } from "@utils/types";
-interface Props extends HeroProps {}
-const { title, excerpt, image } = Astro.props;
+
+const props = Astro.props;
 ---
 
 <header class="vertical_hero content_section bg--primary-darker">
     <Container>
         <article class="vertical_hero__content" data-direction="column">
-            <h1 class="text-primary">{title}</h1>
+            <h1>{props.heading}</h1>
             <div>
-                <p>{excerpt}</p>
+                <p>{props.excerpt}</p>
                 <a
-                    class="btn btn-secondary btn-md"
-                    href="#contact-us"
+                    class="btn btn-primary btn-md"
+                    href="#contact"
                     style="margin-top: var(--size-3);"
                     >Let's Work Together</a
                 >
             </div>
         </article>
-        <!-- <div class="vertical_hero__wrapper">
-        </div> -->
+
         <div class="vertical_hero__image_wrapper full-width">
             <CustomImage
                 classlist="vertical_hero__image"
                 eager={true}
-                image={image}
+                image={props.cover}
                 size="large"
             />
         </div>
