--- a/src/components/Hero/VerticalWithImage/hero.css
+++ b/src/components/Hero/VerticalWithImage/hero.css
@@ -15,8 +15,7 @@
 }
 
 .vertical_hero__content {
-    /* padding-top: var(--size-12);
-    padding-bottom: var(--size-8); */
+    padding-block: var(--size-8);
 
     display: flex;
     /* flex-direction: column; */
@@ -29,7 +28,7 @@
 .vertical_hero__content h1 {
     font-size: var(--heading-2xl);
     line-height: 1.1;
-    /* color: var(--clr-primary-lighter); */
+    color: var(--clr-primary-dark);
 }
 
 .vertical_hero__content>* {
@@ -39,13 +38,14 @@
 .vertical_hero__image_wrapper {
     height: 100%;
     width: 100%;
-    max-height: 400px;
+    max-height: 600px;
     margin-top: var(--size-8);
 }
 
 .vertical_hero__image {
     width: 100%;
     height: 100%;
+    max-width: 100% !important;
     object-fit: cover;
     object-position: top;
 
