--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -14,7 +14,7 @@ import SimpleNav from "./SimpleNav/SimpleNav.astro";
 const props = Astro.props;
 
 const fixedMenu = ["horizontal with image", "black modern", "gradient", "default", "default horizontal", "big name"].includes(hero.type) ? true : false;
-const showSimpleNav = ["alternate vertical", "default vertical", "two column", "stylised horizontal"].includes(hero.type)
+const showSimpleNav = ["vertical", "default vertical", "two column", "stylised horizontal"].includes(hero.type)
 const showPillNav = ["default", "big name"].includes(hero.type)
 
 const navProps = {
