--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -276,6 +276,9 @@ h1 {
     display: grid;
     grid-template-columns:
         [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(var(--min-width), var(--max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
+
+    max-width: calc(var(--max-width) * 1.5);
+    margin: 0 auto;
 }
 
 .content-grid> :not(.breakout, .full-width) {
