--- a/src/components/Hero/Overflow/hero.css
+++ b/src/components/Hero/Overflow/hero.css
@@ -7,7 +7,7 @@
 }
 
 .overflow_hero__content h1 {
-    color: var(--clr-primary-lighter);
+    color: var(--clr-primary);
     font-size: var(--heading-4xl);
     max-width: 50ch;
 }
@@ -22,7 +22,7 @@
 
     width: 100%;
     height: 100%;
-    background: hsl(90 15% 15% / 0.5);
+    background: oklch(from var(--clr-primary) l c h / 0.25);
 }
 
 img#overflow_hero__image.overflow_hero__image {
