--- a/src/components/Hero/VerticalWithImage/hero.css
+++ b/src/components/Hero/VerticalWithImage/hero.css
@@ -28,7 +28,7 @@
 .vertical_hero__content h1 {
     font-size: var(--heading-2xl);
     line-height: 1.1;
-    color: var(--clr-primary-dark);
+    color: var(--clr-primary);
 }
 
 .vertical_hero__content>* {
