--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -10,7 +10,10 @@ const props = Astro.props;
 const icons: Record<string, `mdi:${string}` | `ri:${string}`> = {
     'x (formerly twitter)': "ri:twitter-x-line",
     linkedin: "ri:linkedin-box-fill",
-};
+    facebook: "ri:facebook-box-fill",
+    instagram: "ri:instagram-fill",
+    youtube: "ri:youtube-fill",
+};  
 ---
 
 <a href={props.href} data-icon-link>
